# your-ai-lawyer

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.es.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: compile.md  index.md  lint.md  qa.md  search.md  setup.md
data/: index.json  manifest.json
knowledge/.obsidian/: app.json  graph.json
knowledge/concepts/: addiction-treatment.md  administrative-inspection.md  administrative-sanctions.md  advertising-restrictions.md  agricultural-policy.md  air-quality.md  alcohol-regulation.md  anti-speculation.md  associations.md  atmospheric-pollution.md  autonomous-communities.md  autonomous-police.md  barcelona-metropolitan.md  betting.md  biodiversity.md  budget-control.md  casinos.md  catalan-identity.md  catalan-institutions.md  catalan-language.md  catalan-symbols.md  civic-participation.md  civil-service.md  conflicts-of-interest.md  consumer-protection.md  depopulation.md  drug-dependency.md  economic-development.md  emission-control.md  environmental-bond.md  environmental-monitoring.md  environmental-protection.md  expropriation.md  financial-audit.md  fiscal-incentives.md  food-industry.md  food-safety.md  gambling.md  land-use-planning.md  land-use.md  (+40 more)
knowledge/jurisdictions/: es.md
knowledge/laws/es/: BOE-A-1980-21392.md  BOE-A-1981-12908.md  BOE-A-1982-28597.md  BOE-A-1982-2938.md  BOE-A-1983-23846.md  (+15 more)
src/: config.py
src/compiler/: batch.py  extractor.py  jurisdictions.py  lint.py  list_files.py  parser.py  tracker.py
src/indexer/: embed.py
src/query/: search.py
